helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "5" # limit rate per second per client IP
    nginx.ingress.kubernetes.io/limit-burst: "10"
spec:
  rules:
    - http:
        paths:
          - path: /api/cryptos
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 80
